# carsynth

./: CMakeLists.txt
res/: calib.yaml
src/: converter.cpp  converter.h  main.cpp  parse.cpp  renderer.cpp  renderer.h  ryml.hpp  types.cpp  types.h  util.cpp  util.h  vec_funcs.cpp  vec_funcs.h  vec_ops.h  world.cpp  world.h
